--- a/content/data/config.json
+++ b/content/data/config.json
@@ -79,7 +79,7 @@
             "title": "Contact details",
             "phoneNumber": "760-992-2972",
             "phoneAltText": "My phone number",
-            "email": "thisismyemail.@myemail.me",
+            "email": "dennis@3d-it.net",
             "emailAltText": "My email",
             "address": "312 Lovely Street, Brooklyn, NY, 123456",
             "addressAltText": "My address"
