config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -25,7 +25,7 @@
             },
             {
                 "type": "Link",
-                "label": "Learn more",
+                "label": "3D-IT.NET",
                 "altText": "",
                 "url": "https://sourcegraph.com/cody/chat",
                 "showIcon": false,
