--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
         "type": "Header",
         "headerVariant": "variant-c",
         "isSticky": false,
-        "title": "Personal",
+        "title": "3D-IT.NET",
         "isTitleVisible": true,
         "primaryLinks": [
             {
