--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,7 +29,7 @@
                 "type": "Social",
                 "altText": "Twitter",
                 "label": "Twitter",
-                "url": "https://twitter.com/netlify",
+                "url": "https://www.linkedin.com/in/dennis-duke-63200b310/",
                 "icon": "linkedin"
             },
             {
