config.json: updated label in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,7 +28,7 @@
             {
                 "type": "Social",
                 "altText": "Twitter",
-                "label": "Twitter",
+                "label": "LinkedIn",
                 "url": "https://www.linkedin.com/in/dennis-duke-63200b310/",
                 "icon": "linkedin"
             },
