config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -71,7 +71,7 @@
                 "type": "Link",
                 "label": "LinkedIn",
                 "url": "https://github.com/netlify-templates",
-                "altText": "Netlify templates"
+                "altText": "LinkedIn Profile"
             }
         ],
         "contacts": {
