config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -70,7 +70,7 @@
             {
                 "type": "Link",
                 "label": "LinkedIn",
-                "url": "https://github.com/netlify-templates",
+                "url": "https://www.linkedin.com/in/dennis-duke-63200b310/",
                 "altText": "LinkedIn Profile"
             }
         ],
