config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,7 +20,7 @@
             },
             {
                 "type": "Link",
-                "label": "Learn more",
+                "label": "Free Tools",
                 "altText": "",
                 "url": "3d-it.net/freetools/",
                 "showIcon": false,
