--- a/content/data/config.json
+++ b/content/data/config.json
@@ -17,6 +17,16 @@
                 "type": "Link",
                 "label": "Blog",
                 "url": "/blog"
+            },
+            {
+                "type": "Link",
+                "label": "Free Tools",
+                "altText": "",
+                "url": "3d-it.net/freetools/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": ""
             }
         ],
         "socialLinks": [
