config.json: updated copyrightText in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -89,7 +89,7 @@
             "address": "",
             "addressAltText": "My address"
         },
-        "copyrightText": "Powered by 3d-it.net Yucca Valley California\n",
+        "copyrightText": "Powered by 3d-it.net, Yucca Valley Ca\n",
         "styles": {
             "self": {
                 "width": "narrow",
