config.json: updated title in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -81,7 +81,7 @@
         ],
         "contacts": {
             "type": "ContactBlock",
-            "title": "Contact details",
+            "title": "Yucca Valley California",
             "phoneNumber": "760-992-2972",
             "phoneAltText": "My phone number",
             "email": "dennis@3d-it.net",
