--- a/content/data/config.json
+++ b/content/data/config.json
@@ -86,7 +86,7 @@
             "phoneAltText": "My phone number",
             "email": "dennis@3d-it.net",
             "emailAltText": "My email",
-            "address": "",
+            "address": "Yucca Valley, California",
             "addressAltText": "My address"
         },
         "copyrightText": "Powered by 3d-it.net, Yucca Valley Ca\n",
