config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -63,7 +63,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "url": "mailto:dennis.@3d-it.net",
+                "url": "mailto:dennis@3d-it.net",
                 "altText": ""
             },
             {
